--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ pubspec.lock
 # If you don't generate documentation locally you can remove this line.
 doc/api/
 .DS_Store
+sandbox/.idea/workspace.xml
+sandbox/.idea/workspace.xml
+sandbox/.idea/workspace.xml
